tests/NormalTests/paczka1/small_fuzzy/88513062.err
Error in line 1: A10 S104 89,4
Error in line 8: L3m8ZzI S473 59,7
